# odio_urdf

./: CMakeLists.txt  README.md  package.xml  setup.py
odio_urdf/: __init__.py  __main__.py
odio_urdf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/odio_urdf/: __init__.py  __main__.py
test/: test_coman
test/coman/: arms.py  foot_reference_frame.py  forearms.py  hand_reference_frame.py  imu.py  legs.py  no_forearms.py  xtion.py
test/iiwa7/: iiwa_gazebo.py  iiwa_materials.py  iiwa_transmission.py
tests/: new_elements_how_to.py  test_coman
tests/coman/: coman.py  coman_base.py  soft_hand.py  torso.py
tests/iiwa7/: iiwa7.urdf.py
