<?xml version="1.0"?>
<package>
  <name>odio_urdf</name>
  <version>1.2.1</version>
  <description>The odio_urdf package</description>
  <maintainer email="hauptmech@gmail.com">Hauptmech</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/hauptmech/odio_urdf</url>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
